# COMP220Bookstore

./: .gitignore  ArrayLib.cpp  ArrayList.cpp  ArrayList.h  ArrayList.inl  ArrayQueue.h  ArraySortedTitleList.h  ArrayTitleList.cpp  ArrayTitleList.h  CMakeLists.txt  InventoryManager.cpp  InventoryManager.h  InventoryTester.cpp  InventoryTester.h  JSONable.h  LinkedList.cpp  LinkedList.h  LinkedList.inl  LinkedNode.h  LinkedNode.inl  LinkedQueue.h  LinkedQueue.inl  List.h  ListTests.cpp  ListTests.h  MIterator.h  Person.cpp  Person.h  Queue.h  QueueTests.cpp  QueueTests.h  README.md  SortedTitleList.cpp  SortedTitleList.h  Title.cpp  Title.h  TitleList.h  UI.cpp  UI.h  UITester.cpp  (+8 more)
testfiles/: order.txt  return.txt  test1.json  test2.json  testsave.json
